fix size, add scrollbar for extras

--- a/frontend/src/components/Pizza/Extras.module.css
+++ b/frontend/src/components/Pizza/Extras.module.css
@@ -48,19 +48,21 @@
 
 .foodcontainer {
   box-shadow: 6px 2px 6px 6px rgba(0, 0, 0, 0.45);
-  border-radius: 5vmin;
+  border-radius: 5vmin 10px 10px 5vmin;
   height: 100%;
   width: 70%;
   border-color: white;
   border-style: solid;
   border-width: 2px;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .foodcontainer img {
   width: 100%;
   height: 30vmin;
   object-fit: cover;
-  border-radius: 5vmin 5vmin 0 0;
+  border-radius: 5vmin 10px 0 0;
   z-index: 2;
 }
 
@@ -69,7 +71,7 @@
   top: -30vmin;
   width: 100%;
   height: 30vmin;
-  border-radius: 5vmin 5vmin 0 0;
+  border-radius: 5vmin 10px 0 0;
   background: linear-gradient(rgba(255, 255, 255, 0.15), rgba(200, 16, 43, 0.35));
   border-width: 0px 0px 2px 0px;
   border-style: solid;
@@ -79,6 +81,7 @@
 .fooddesc {
   position: relative;
   top: -30vmin;
+  height: 5%;
   margin: 1rem;
 }
 
@@ -116,6 +119,7 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
+  padding-bottom:1rem;
 }
 
 .control button {
@@ -156,9 +160,9 @@
   margin-top: 1rem;
   overflow-y: auto;
   overflow-x: hidden;
-  border-radius: 5vmin;
+  border-radius: 5vmin 10px 10px 5vmin;
   box-shadow: inset 0 0 12px 6px rgba(0,0,0,0.45);
-  padding: 0 1rem;
+  padding-left: 2rem;
 }
 
 .ingredient-list h1{
@@ -238,6 +242,28 @@
 }
 
 .ingredient-list::-webkit-scrollbar-thumb:active {
+  background-color: rgb(200, 16, 43);
+  border-radius: 0 10px 10px 0;
+  box-shadow: inset 0 0 6px 2px rgba(0, 0, 0, 0.5);
+}
+
+.foodcontainer::-webkit-scrollbar {
+  width: 18px;
+}
+
+.foodcontainer::-webkit-scrollbar-track {
+  background-color: rgb(238, 170, 170);
+  box-shadow: inset 0 0 6px 4px rgba(0, 0, 0, 0.3);
+  border-radius: 0 10px 10px 0;
+}
+
+.foodcontainer::-webkit-scrollbar-thumb {
+  background-color: white;
+  border-radius: 0 10px 10px 0;
+  box-shadow: inset 0 0 6px 2px rgba(0, 0, 0, 0.5);
+}
+
+.foodcontainer::-webkit-scrollbar-thumb:active {
   background-color: rgb(200, 16, 43);
   border-radius: 0 10px 10px 0;
   box-shadow: inset 0 0 6px 2px rgba(0, 0, 0, 0.5);
